- fixed the ant compilation issues (all jars need to be in the lib/ folder, not subfolders of the lib folder); added missing jar - changed the use of sun.misc.Base64Encoder to a LGPL'd version (now in src-support) to prevent compilation warning
git-svn-id: svn://dev-svn.seasr.org/Components/Foundry/trunk@1456 dc7ab104-3778-4984-a5d9-166996b8e16d